# console-gsoc

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  gsoc.md
console/:  testfilter.txt  Cargo.toml  build.rs
console/src/: connection.rs  lib.rs  main.rs
console/src/filter/: mod.rs
console/src/storage/: messages.rs  mod.rs  store.rs
console/src/ui/: app.rs  command.rs  events.rs  mod.rs  query.rs  thread.rs
example/: Cargo.toml
example/src/: main.rs
proto/: tracing.proto
src/: main.rs
src/ui/: app.rs  events.rs  mod.rs  thread.rs
storage/: Cargo.toml
storage/src/: lib.rs  store.rs  subscriber.rs
subscriber/: Cargo.toml  build.rs
subscriber/src/: lib.rs  messages.rs  server.rs  subscriber.rs
subscriber/src/future/: mod.rs  server.rs  subscriber.rs
subscriber/src/threaded/: mod.rs  server.rs  subscriber.rs
subscriber/src/tokio/: server.rs  subscriber.rs
