[package]
name = "console"
version = "0.1.0"
authors = ["Matthias Prechtl <m.sleepypanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.9"
failure = "0.1.5"
tracing = "0.1"
tracing-test = { git = "https://github.com/MSleepyPanda/tokio-trace-nursery", branch="beacon" }

[dependencies.tui]
version = "0.6"
features = ["crossterm"]
default-features = false


[dependencies.storage]
path = "./storage"
