[package]
name = "console"
version = "0.1.0"
authors = ["Matthias Prechtl <m.sleepypanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
crossbeam = "0.7.1"
crossterm = "^0.9"
failure = "0.1.5"
futures = "0.1"
http = "0.1"
tokio = "0.1"
hyper = "0.12"
prost = "0.5.0"
tower-request-modifier = "0.1.0"
tower-hyper = "0.1"
tower-grpc = { features = ["tower-hyper"], version = "0.1.0" }
tower-service = "0.2"
tower-util = "0.1"
regex = "1.2.0"

[dependencies.tui]
version = "0.6"
features = ["crossterm"]
default-features = false

[build-dependencies]
tower-grpc-build = { version = "0.1.0",  features = ["tower-hyper"]  }
