[package]
name = "example"
version = "0.1.0"
authors = ["Matthias Prechtl <m.sleepypanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-test = { git = "https://github.com/MSleepyPanda/tokio-trace-nursery", branch="beacon" }

[dependencies.console-subscriber]
path = "../subscriber"
