[package]
name = "console-subscriber"
version = "0.1.0"
authors = ["Matthias Prechtl <m.sleepypanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
chrono = "0.4.7"
crossbeam = "0.7.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
tokio = "0.1"
tower-hyper = "0.1"
tower-grpc = { features = ["tower-hyper"], version = "0.1.0" }
tower-service = "0.2"
tower-util = "0.1"
tracing-core = "0.1"
prost = "0.5.0"
smallvec = "0.6.10"

[build-dependencies]
tower-grpc-build = { version = "0.1.0",  features = ["tower-hyper"]  }
